cool#13350 : notebookbar: fix light background in transitions panel for dark mode
Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/5124
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>

--- a/browser/css/color-palette-dark.css
+++ b/browser/css/color-palette-dark.css
@@ -23,7 +23,7 @@
 	--color-background-lighter: #262626; /* hover, toolbar, dialog, disabled */
 	--color-overlay: #1c5fa814;
 	--color-background-tabs-group: #303030;
-	--color-stylesview-background: white;
+	--color-stylesview-background: var(--color-background-lighter);
 	--brightness-stylesview: 0.9;
 
 	--color-canvas: #141414;
